--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ h1 {
   font-family: "NixieOne";
   font-size: 5.6rem;
   font-weight: lighter;
-  text-shadow: 0.3rem 0.3rem 0.5rem rgb(50, 49, 49);
+  text-shadow: 0.3rem 0.3rem 0.5rem rgb(0, 0, 0);
 }
 h2 {
   font-family: "Alegreya SC";
@@ -60,15 +60,16 @@ h4 {
   font-size: 2.5rem;
 }
 
-li {
+li,.language {
   font-family: "Alegreya Sans";
   font-weight:normal;
   font-size: 2rem;
   color: white;
+  cursor: pointer;
 }
 a {
   font-family: "Helvetica Neue";
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 
   text-decoration:none;    
   padding: 0.8rem 1.5rem;
@@ -76,12 +77,18 @@ a {
   color: var(--txt-blu);
 
   border: 1px solid gray;
+  transition: all;
 }
 a:hover{
   background-color: var(--color-blue);
   color: white;
   border: 1px solid rgba(255, 255, 255, 0.487);
+  transform: scale(1.1);
+  box-shadow: 0px 0px 2px 2px rgba(0, 255, 247, 0.7) inset;
+  font-weight:bold;
 }
+
+
 p {
   font-family: "Helvetica Neue";
   font-size: 1.6rem;
@@ -116,7 +123,7 @@ main {
   width: 100%;
   background-color: rgba(0, 89, 255, 0.85);
   height: 80px;
-  padding: 5px 80px;
+  padding: 10px 80px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.678);
   z-index: 1;
 }
@@ -124,13 +131,21 @@ main {
 .logo{
   height: 100%;
   transition: all 0.5s ease-in-out;
-  animation: breathEffect 4s infinite ease-in-out;
+  animation: breathEffect 6s infinite ease-in-out;
 }
 
 @keyframes breathEffect {
   0% { filter: drop-shadow(5px 5px 8px rgba(37, 37, 37, 0.8)); }
-  50% { filter: drop-shadow(2px 2px 5px rgb(3, 242, 255)); }
+  50% { filter: drop-shadow(3px 3px 2px rgba(3, 242, 255, 0.8)); }
   100% { filter: drop-shadow(5px 5px 10px rgb(89, 0, 255)); }
+}
+
+.nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 30px;
 }
 
 .nav-list {  
@@ -146,6 +161,12 @@ main {
 }
 
 .nav-list li:hover {
+  color: yellow;
+  transform: scale(1.1);
+  text-shadow: 1px 1px 3px black;
+} 
+
+.language:hover {
   color: yellow;
   transform: scale(1.1);
   text-shadow: 1px 1px 3px black;
@@ -167,7 +188,7 @@ main {
 .container-large {
   margin: 0;
   padding: 80px;
-  background-color: rgba(0, 0, 0, 0.48);
+  background-color: rgba(0, 0, 0, 0.75);
   color: white;
   display: flex;
   justify-content: space-between;
@@ -193,7 +214,7 @@ main {
   text-align: center;
   padding: 20px;
   color: white;
-  font-size: 1.5rem;
+  transition: all 5s ease-in-out;
 }
 .hero:hover {
   background-size: auto; 
@@ -203,9 +224,23 @@ main {
   font-family: "Alegreya SC";
   font-size: 3rem;
   color: rgb(255, 255, 255);
-  text-shadow: 0.2rem 0.2rem 0.3rem rgb(50, 49, 49);
+  text-shadow: 0.2rem 0.2rem 0.3rem rgb(0, 0, 0);
   margin-top: 20px;
 }
+
+
+.head-subhead {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+width: 100%;
+gap: 10px;
+margin-bottom: 30px;
+}
+
+
 
 .about {  
   /* background-image: url('./assets/img/about.jpg'); */
@@ -220,18 +255,23 @@ main {
   align-items: center;
 
   font-size: 1.5rem;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
-
+.about img, .projects img{
+  filter: blur(1.5px);
+}
 
 .about img:hover {
-transform: scale(1.05);
-}
-.services img:hover {
-  transform: scale(1.05);
-}
+  transform: scale(1.02);
+  filter: blur(0px);
+  box-shadow: 0 0 15px rgba(0, 255, 251, 0.9);
+ }
+ 
+
 .projects img:hover {
- transform: scale(1.05);
+ transform: scale(1.02);
+ filter: blur(0px);
+ box-shadow: 0 0 15px rgba(0, 255, 251, 0.9);
 }
 
 .services {  
@@ -342,6 +382,7 @@ transform: scale(1.05);
   height: 14vw;
   object-fit: cover;
   object-position: center;
+  transition: all 0.4s ease-in-out;
 }
 
 .container-middle img{
@@ -349,8 +390,24 @@ transform: scale(1.05);
   height: 18vw;
   object-fit: cover;
   object-position: center;
+  transition: all 0.5s ease-in-out;
 }
 
+.image-container{
+  width: 100%;
+  height: 14vw;
+  overflow: hidden;
+  position: relative;
+}
+.image-container img{
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: all 0.5s ease-in-out;
+}
+.image-container img:hover{
+transform: scale(1.5);
+}
 
 .contact form {
   display: flex;
@@ -403,6 +460,7 @@ textarea::placeholder {
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.08) inset;
   color: white;
   cursor: pointer;
+  padding: 5px;
 }
 
 
